--- a/简历话术/精通.md
+++ b/简历话术/精通.md
@@ -1,37 +1,22 @@
-**启动一个线程是用 run()还是 start()?**
-启动一个线程是调用 start()方法，使线程进入就绪状态，以后可以被调度为运行状态。
-run()方法是线程的线程执行体——也就是线程将要完成的事情。
-
-**多线程有几种实现方法?同步有几种实现方法?**
-
-在 Java5 以前，有如下两种：
-第一种：继承 Thread 类，重写它的 run()方法。
-第二种：实现 Runnable 接口，并重写它的 run()方法
-从 Java 5 开始，Java 提供了第三种方式来创建多线程：实现 Callable 接口，并实现 call()
-方法。Callable 接口相当于 Runnable 接口的增强版，因为 Callable 接口中定义的 call()方法
-既拥有返回值，也可以声明抛出异常。
 
 
-**sleep()和 wait()有什么区别?**
-sleep()是 Thread 类的静态方法，它的作用是让当前线程从运行状态转入阻塞状态，线程
-执行暂停下来，当一个线程通过 sleep()方法暂停之后，该线程并不会释放它对同步监视器的
-加锁。
-wait()是 Object 对象的方法，但实际上只有同步监视器才能调用该方法。当程序在同步
-代码块、或同步方法内通过同步监视器调用该方法时，将会导致当前线程释放对该同步监视
-器的加锁，而该线程则会进入该同步监视器的等待池中，直到该同步监视器调用 notify()或
-notifyAll()来通知该线程。
+![img](https://uploadfiles.nowcoder.com/images/20250501/178584362_1746069911230/D2B5CA33BD970F64A6301FA75AE2EB22)
 
-**error 和 exception 有什么区别?**
-Error 错误，一般是指虚拟机相关的问题，如系统崩溃、虚拟机出错误、动态链接失败
-等，这种错误无法恢复或不可能捕获，将导致应用程序中断。通常应用程序无法处理这些错
-误，因此应用程序不应该试图使用 catch 块来捕获 Error 对象。
-由于编译器会对 Error 进行检查，不会强制要求程序员必须处理 Error，因此 Error 也被
-归入 unchecked 异常分类中（另外：运行时异常也属于 unchecked 异常）。
-Exception 表示一种设计或实现问题。也就是说，程序员应该对这些情况进行考虑、并
-提供相应的处理。
+- 熟练掌握Java语言以及面向对象设计思想，熟悉常见的集合和映射工具类，熟悉Java反射机制以及I/O流以及NIO模型，熟悉泛型机制。
 
-是否可以继承 String 类?
-String 类是 final 类，不可以被继承。
+- **JVM**：熟悉JVM内存模型，熟悉基本的垃圾回收器和垃圾回收原理和过程，熟悉类加载机制等，了解常见的JVM调优。
+- **计算机网络**：熟悉计算机网络基础知识，熟悉TCP/IP网络模型，了解HTTP、TCP、UDP、IP、DNS等常见网络协议。
+- **并发编程**：熟悉多线程、JUC并发编程，熟悉底层工具类Synchronized、ReentrantLock、CAS、AQS。熟悉使用线程池管理多线程任务。
+- **MySQL 数据库**：熟悉MySQL数据库的使用，理解常见存储结构，了解索引、事务、锁、日志、MVCC机制等原理以及bin - log和redo - log数据备份策略。
+- **Redis**：熟悉Redis基本操作，了解底层数据类型、RDB和AOF持久化策略、删除策略、缓存淘汰策略、Redisson实现分布式锁以及主从哨兵等机制。
+- **框架**：熟悉SSM、SpringBoot框架，理解IOC、AOP机制，了解Spring启动流程，理解Bean生命周期和循环依赖问题以及常见的开发注解。
+- **消息中间件**：熟悉Kafka等消息中间件的使用，了解死信队列、延迟队列、常见的解耦方案（消息可靠性、幂等性等），了解消息持久化机制。
+- **Netty**：熟悉Netty网络框架，熟悉Netty核心组件，Reactor线程模型、长连接和心跳以及零拷贝机制和解决TCP粘包，以及Netty的C/S启动过程。
+- **Zookeeper**：熟悉Zookeeper注册中心框架，理解ZAB和选举机制，实现分布式锁以及会话管理机制，以及集群管理，负载均衡、数据发布/订阅场景。
+- **工具**：熟练使用开发工具IDEA，项目管理工具Maven，性能测试工具JMeter，版本控制Git，容器管理Docker，接口测试工具Postman、Swagger。
+- **设计模式与数据结构算法**：熟悉项目设计模式，如单例、工厂、责任链、适配器设计模式，熟悉数据结构与算法，如集合、映射、链表、栈、队列、二叉树、图、堆等。
+
+
 
 
 1. 精通Java核心技术，多年一线开发经验，具备良好的编程能力，熟练应用设计模式。
@@ -86,5 +71,4 @@ String 类是 final 类，不可以被继承。
 **8.** **开发工具精通：**
 **高效使用 IDEA、Eclipse 等 IDE 进行日常开发。**
 **熟练应用 Postman 进行 API 测试、Navicat 进行数据库管理、VMware 进行虚拟环境搭建。**
-
 
